Refactored Demographic Charts into new module, implemented most of the pie charts. Tweaked some layout issues. Fixed a bug that did not remove Summary option in charts view.

--- a/nexus/static/css/base.css
+++ b/nexus/static/css/base.css
@@ -608,7 +608,7 @@ nav span.FilterTitle {
     /* border:1px solid var(--logo-dark-purple); */
 }
 #canvas.viz>div {
-    margin:auto;
+    margin:20px auto;
 }
 h3.graphNYI {
     margin:3em auto;
